react-app/src/index.css
/* TODO Add site wide styles */

/* ~~~~~~~~~~~~~~~ Developer Night Mode ~~~~~~~~~~~~~~~ */
/* body {color: white;background-color: black;}
input {color: white; background-color: black; border: 1px solid white;}
a {color: white;} */

body {
  width: 500px;
  max-width: 80%;
  min-width: 375px;
  display: block;
  margin: 20px auto;
}

img {
  width: 500px;
  display: block;
}

summary {
  transition: 2s;
}

splash {
  text-align: center;
}

splash p {
  line-height: 20px;
  margin-bottom: 27. f5px;
}

splash h1 {
  margin-top: 30%;
  font-family: serif;
  font-size: 50px;
  font-weight: 100;
}

splash vr {
  width: 5px;
  margin-right: 5px;
  height: 15px;
  display: inline-block;
  border-right: 1px solid cornflowerblue;
  transform: translateY(4px);
}

navbar {
  margin-bottom: 70px;
}

splash a, splash .logout-button {
  color: cornflowerblue;
  margin-right: 2.5px;
  margin-left: 2.5px;
  font-size: 15px;
  text-transform: lowercase;
  text-decoration: none;
}

navbar a {
  color: dodgerblue;
  margin-right: 5px;
  font-size: 13px;
  text-transform: lowercase;
}

navbar button {
  background: none;
  border: none;
  color: dodgerblue;
  font-family: serif;
  text-decoration: underline;
  padding: 0;
  cursor: pointer;
}

splash button {
  background: none;
  border: none;
  color: dodgerblue;
  font-family: serif;
  text-decoration: underline;
  padding: 0;
  cursor: pointer;
  font-size: 15px;
  margin-right: 2.5px;
  margin-left: 2.5px;
}

home h1 {
  font-weight: 100;
  text-transform: lowercase;
  font-size: 45px;
  margin-bottom: 0px;
  margin-top: 75px;
}

home h2 {
  font-weight: 100;
  text-transform: lowercase;
  font-size: 20px;
  margin-top: 0px;
}

home h3 {
  font-weight: 100;
  font-size: 17.5px;
  margin-top: 30px;
  margin-bottom: 0px;
  padding-bottom: 12.5px;
  border-bottom: 1px solid black;
}

home ul {
  margin-top: 12.5px;
  padding-left: 0;
}

home ul li {
  list-style: none;
  margin-bottom: 3px;
}

home ul li a {
  color: cornflowerblue;
  text-decoration: none;
}

home .new-page {
  border: 1.5px solid cornflowerblue;
  border-radius: 3px;
  padding: 7px 25px;
  color: cornflowerblue;
  text-decoration: none;
  display: block;
  width: fit-content;
  margin-top: 40px;
}

home .bottom-link, home button {
  border: none;
  padding: 0;
  color: cornflowerblue;
  text-decoration: none;
  width: fit-content;
  margin-top: 20px;
  background-color: #00000000;
  font-family: serif;
  font-size: 13px;
  cursor: pointer;
}

home vr {
  width: 6.5px;
  margin-right: 6.5px;
  height: 15px;
  display: inline-block;
  border-right: 1.5px solid cornflowerblue;
  transform: translateY(4px);
}

home .bottom-link:hover, home button:hover, home ul li a:hover {
  text-decoration: underline;
}

splash p.instagram-link {
  margin-top: 75px;
  font-size: 12px;
}

splash .instagram-link a {
  font-size: 12px;
}

page h1 {
  font-size: 40px;
  font-weight: 100;
  margin-top: 50px;
  margin-bottom: 0px;
}

page .links-ul {
  padding-left: 0;
  margin-top: 0px;
  margin-bottom: 17.5px;
}

page .links-ul li {
  list-style-type: none;
}

page .links-ul li a {
  color: cornflowerblue;
  /* text-decoration: none; */
  font-size: 15px;
}

page .post-li a p {
  font-size: 14px;
}

page .page-contact {
  font-size: 15px;
}

page .page-text {
  font-size: 16px;
  margin-bottom: 0px;
}

page .page-location {
  font-size: 15px;
  margin-top: 10px;
  margin-bottom: 17.5px;
}

page .user-links-ul {
  padding-left: 0;
}

page .user-links-ul li {
  list-style: none;
  display: inline-block;
}

page .user-links-ul button {
  list-style: none;
  display: inline-block;;
  border: none;
  background-color: #00000000;
  color: cornflowerblue;
  font-size: 12px;
  font-family: serif;
  padding: 0;
  text-decoration: none;
}

page .user-links-ul li a {
  color: cornflowerblue;
  font-size: 12px;
  text-decoration: none;
}

page vr {
  width: 0px;
  margin-right: 5px;
  height: 15px;
  display: inline-block;
  border-right: 1px solid cornflowerblue;
  transform: translateY(4px);
}

page .posts-ul {
  margin-top: 50px;
  padding-left: 0;
}

page .posts-ul li {
  list-style: none;
  margin-bottom: 50px;
}

page .posts-ul li a {
  text-decoration: none;
  color: black;
}

page .posts-ul li h2 {
  font-weight: 100;
  margin-top: 0;
}

post .post-li {
  color: cornflowerblue;
}

post .post-li img {
  max-width: 100%;
}

post li.post-li a h3 {
  text-decoration: none;
  color: black;
}

signup, login, postcreate, postedit {
  width: 325px;
  display: block;
  margin: auto;
}

login form, signup form, postcreate form, postedit form, pagecreate form, pageedit form {
  border: 0.5px solid black;
  border-radius: 5px;
  padding: 35px 50px;
  margin-bottom: 20px;
}

login h1, signup h1, postcreate h1, postedit h1, pagecreate h1, pageedit h1 {
  font-weight: 100;
  margin-top: 75px;
}

login label, signup label, postcreate label, postedit label, pagecreate label, pageedit label {
  display: block;
  font-size: 14px;
  margin-bottom: 3px;
}

login input, signup input, postcreate input, postedit input, pagecreate input, pageedit input {
  display: block;
  font-size: 14px;
  margin-bottom: 12px;
  width: 200px;
  font-family: serif;
  padding: 4px 7px;
}

login button:hover, signup button:hover, postcreate button:hover, postedit button:hover, pagecreate button:hover, pageedit button:hover {
  cursor: pointer;
}

login button, signup button, postcreate button, postedit button, pagecreate button, pageedit button {
  display: block;
  font-size: 14px;
  margin-top: 25px;
  width: 100px;
  color: cornflowerblue;
  font-family: serif;
  padding: 5px 12px;
  background-color: #00000000;
  border: 1px solid cornflowerblue;
  border-radius: 5px;
}


login a, signup a, postcreate a, postedit a, pagecreate a, pageedit a {
  border: none;
  padding: 0;
  color: cornflowerblue;
  text-decoration: none;
  width: fit-content;
  background-color: #00000000;
  font-family: serif;
  font-size: 13px;
  cursor: pointer;
}

login vr, signup vr, postcreate vr, postedit vr, pagecreate vr, pageedit vr {
  width: 5px;
  margin-right: 5px;
  height: 15px;
  display: inline-block;
  border-right: 1px solid cornflowerblue;
  transform: translateY(4px);
}

signup breakline {
  display: block;
  width: 150px;
  margin-top: 30px;
  margin-bottom: 30px;
  background-color: rebeccapurple;
  /* border-bottom: 0.5px solid black; */
}

